--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -1,39 +1,54 @@
 ### Copy and fill this experimental design template in your ITR_Seq analysis directory
 ### Global variables are in upper cases
 ## Per sample options are in lower cases
-## NUM_PROC=8: # of processors (threads) to use, set it <= 2 * processors [default 8]
-## BASE_DIR=.: base directory for all results (figures and tables) [default .]
+## NUM_PROC=16: # of processors (threads) to use, set it <= 2 * processors [default 8]
+## BASE_DIR=.: base directory for results (sequences, alignments, tables, figures, etc.) [default .]
 ## WORK_DIR=WORK: working directory for all intermediate files [default WORK/]
-## SCRIPT_DIR=/project/gtplab/pipeline/ITR_Seq: path to the pipeline scripts, default [scripts/]
-## DEMUX_DIR=fastqs/demux/: path to demultiplexed per-sample FASTQ files [default fastqs/demux/]
+## SCRIPT_DIR=scripts: path to the pipeline scripts, default [scripts/]
+## DEMUX_DIR=fastqs/demux: path to demultiplexed per-sample FASTQ files [default fastqs/demux/]
 ## METADATA_DIR=metadata: path to metadata files, including per-run mapping file [default metadata/]
 ## VECTOR_DIR=AAV_vector: path to the AAV vector sequence files [default AAV_vector/]
-## READ_LEN=150: NOMINAL LENGTH of this Illumina run, sometimes the actual length of the read is 1 bp longer than the NOMINAL LENGTH
-## UMI_LEN=6: Unique Molecular Identifier (UMI) length that were built into the P5 Index primer [default 6]
+## UMI_LEN=8: Unique Molecular Identifier (UMI) length that were built into the P5 Index primer [default 6]
+## UMI_MM=0: mismatch allowed when mark UMI duplicates [default 0]
+## ITR_PRIMER=ACAAGGAACCCCTAGTGATGGAGTTGGCC: ITR-specific (GSP3) primer sequence that are revcom to the ITR sequence
+## INSERT_SIZE=20: ITR insertion recgonization site size by the ribonuclease, used to call insertion site [default 20]
+## KEEP_UNPAIR=1: beside paired mapped reference reads, which additional strand to keep, 0 for none, 1 for forward, 2 for reverse and 3 for both [default 1]
+## KEEP_STRAND=3: strand(s) required for peaks, 0: no requirement, 1 forward, 2: reverse, 3: both, [use 3 for editing, 0 for therapy]
 ##########################
 # Per-sample options below
 ##########################
 ## sample_name: unique sample name, don't have to the the run name loaded into the sequencer
-## fastq_fwd: filename of forward FASTQ read (R1), .gz files are accepted
-## fastq_rev: filename of reverse FASTQ read (R2), .gz files are accepted
+## fastq_R1: filename of forward FASTQ read (R1), .gz files are accepted
+## fastq_R2: filename of reverse FASTQ read (R2), .gz files are accepted
+## fastq_I1: filename of forward FASTQ index (I1), .gz files are accepted
+## fastq_I2: filename of reverse FASTQ index (I2), .gz files are accepted
 #################################
 ### ITR sequence trimming options
 #################################
-## vector_file: Vector sequence file(s) (in GenBank (.gb) format), from which their 5' ITR repeat sequences will be extracted and used as adaptors to be trimmed. (you may pub multiple VECTOR sequence files and separate them by spaces (non-tabs)
+## vector_file: Vector sequence file (in GenBank (.gb) format), from which its 5' ITR repeat sequences will be extracted and used as adaptors to be trimmed. You can contate multiple GenBank files together, as long as they have unique "LOCUS" names at the beginning of the files
 ## trim_prog: program used to trim ITR sequences at the beinning of the reverse (R2) reads, now support only 'cutadapt'
-## min_overlap: minimum overlap length between the the 3'ITR sequence(s) and the R2 reads and the beginning, always use 29 for ITR-Seq
 ## max_error_rate: maximum error rate between ITR sequence(s) and the R2 reads (recommand 0.1)
+## min_len: minimum length after trimming (recommend 18)
 ## trim_opts: any other options you want to enable for the trimming program of choice, leave blank if none
 ########################
 ### Read mapping options
 ########################
 ## aligner: NGS aligner name to use, now supports 'bowtie2' and 'bwa'
 ## align_opts: any additonal options you want to use to invoke the NGS aligner, i.e. '--local' for bowtie2. Read the aligner's manual before setting this
-## ref_db: path/name to reference genome database, e.g.: /project/gtplab/pub_data/genomes/Macaca_mulatta/Bowtie2_index/Mmul_10/Mmul_10
-#############################
+## ref_db: path/name to reference genome database, e.g.: /project/gtplab/pub_data/genomes/Macaca_mulatta/Bowtie2_index/Mmul_10/MMul_10
+######################################
+### Filtering and peak calling options
+######################################
+## min_mapQ: minimum mapping quality (mapQ) values required (recommend 20)
+## max_dist: maximum distance allowed for merging multiple alignment into islands
 ### Classify/Annotate options
 #############################
-## ref_gff: path to reference genome GFF3/GTF annotation file, e.g.: /project/gtplab/pub_data/genomes/Macaca_mulatta/
-### sample_name	fastq_fwd	fastq_rev	vector_file	trim_prog	min_overlap	max_error_rate	trim_opts	aligner	align_opts	ref_db	ref_gff
-B980-01	B980-01_S1_L001_R1_001.fastq.gz	B980-01_S1_L001_R2_001.fastq.gz	p0146.gb	cutadapt	29	0.1		bowtie2		Bowtie2_index/Mmul_10/Mmul_10
-B980-02	B980-02_S2_L001_R1_001.fastq.gz	B980-02_S2_L001_R2_001.fastq.gz	p0146.gb	cutadapt	29	0.1		bowtie2		Bowtie2_index/Mmul_10/Mmul_10
+## ref_gff: path to reference genome GFF3/GTF annotation file, e.g.: /project/gtplab/pub_data/genomes/Macaca_mulatta/annotation/Macaca_mulatta.Mmul_10.105.clean.gff3
+## genome_seq: path to genome seq file, or directory containing genomic seq files (in FASTA format), e.g. /project/gtplab/pub_data/genomes/Macaca_mulatta/fasta/Mmul_10/
+###############################
+### Gene editing target options
+###############################
+## target_file: path to BED file of one or more known gene editing target regions, leave blank if not provided
+### sample_name	fastq_R1	fastq_R2	fastq_I1	fastq_I2	vector_file	trim_prog	max_error_rate	min_len	trim_opts	aligner	align_opts	ref_db	min_mapQ	max_dist	ref_gff	genome_seq
+B165-16-B4	B165-16-B4_S16_L001_R1_001.fastq.gz	B165-16-B4_S16_L001_R2_001.fastq.gz	B165-16-B4_S16_L001_I1_001.fastq.gz	B165-16-B4_S16_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2	--local	Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	50	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed
+B165-17-B5	B165-17-B5_S17_L001_R1_001.fastq.gz	B165-17-B5_S17_L001_R2_001.fastq.gz	B165-17-B5_S17_L001_I1_001.fastq.gz	B165-17-B5_S17_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2	--local	Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	50	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed
