--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -49,8 +49,8 @@
 ### Gene editing/therapy options
 ################################
 ## target_file: path to BED file of one or more known gene editing target regions, leave blank if this is a gene therapy sample
-## max_clone_dist: maximum distance allowed for merging unique clone sites, ignored if target_file is provided (gene-editing sample); We recommand 0 (default 0)
+## max_clone_dist: maximum distance allowed for merging unique clone sites, ignored if target_file is provided (gene-editing sample), use negative values to enfore overlapping; We recommand -INSERT_SIZE (default -2)
 ## min_clone_loc: minimum distinct UMI R1 locus required to define a clonal expasion, ignored if target_file is provided (gene-editing sample) (default 2)
 ### sample_name	fastq_R1	fastq_R2	fastq_I1	fastq_I2	vector_file	trim_prog	max_error_rate	min_len	trim_opts	aligner	align_opts	ref_db	min_mapQ	max_dist	ref_gff	genome_seq	min_clone_exp	target_file
-B165-16-B4	B165-16-B4_S16_L001_R1_001.fastq.gz	B165-16-B4_S16_L001_R2_001.fastq.gz	B165-16-B4_S16_L001_I1_001.fastq.gz	B165-16-B4_S16_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	44	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	0	2
-B165-17-B5	B165-17-B5_S17_L001_R1_001.fastq.gz	B165-17-B5_S17_L001_R2_001.fastq.gz	B165-17-B5_S17_L001_I1_001.fastq.gz	B165-17-B5_S17_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	44	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	0	2
+B165-16-B4	B165-16-B4_S16_L001_R1_001.fastq.gz	B165-16-B4_S16_L001_R2_001.fastq.gz	B165-16-B4_S16_L001_I1_001.fastq.gz	B165-16-B4_S16_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	44	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	-2	2
+B165-17-B5	B165-17-B5_S17_L001_R1_001.fastq.gz	B165-17-B5_S17_L001_R2_001.fastq.gz	B165-17-B5_S17_L001_I1_001.fastq.gz	B165-17-B5_S17_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	44	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	-2	2
