--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -14,6 +14,8 @@
 ## INSERT_SIZE=2: ITR insertion recgonization site size by the ribonuclease, used to call insertion site [default 20]
 ## KEEP_UNPAIR=1: beside paired mapped reference reads, which additional strand to keep, 0 for none, 1 for forward, 2 for reverse and 3 for both [default 1]
 ## KEEP_STRAND=3: strand(s) required for peaks, 0: no requirement, 1 forward, 2: reverse, 3: both, [use 3 for editing, 0 for therapy]
+## MAX_PEAK_DIST=44: maximum distance allowed for merging multiple alignment into peaks/islands, we recommand use 2 X target size [default 44]
+## MAX_CLONE_DIST=-2: maximum distance allowed for merging unique clone sites, ignored if target_file is provided (gene-editing sample), use negative values to enfore overlapping; We recommand -INSERT_SIZE [default -2]
 ##########################
 # Per-sample options below
 ##########################
@@ -40,7 +42,6 @@
 ### Filtering and peak calling options
 ######################################
 ## min_mapQ: minimum mapping quality (mapQ) values required (recommend 30)
-## max_dist: maximum distance allowed for merging multiple alignment into islands, we recommand use 2 X target size (default 44)
 ### Classify/Annotate options
 #############################
 ## ref_gff: path to reference genome GFF3/GTF annotation file(s), e.g.: /project/gtplab/pub_data/genomes/Macaca_mulatta/annotation/Macaca_mulatta.Mmul_10.105.clean.gff3, multiple GFF3/GTF annotation files separated by space are allowed
@@ -49,8 +50,7 @@
 ### Gene editing/therapy options
 ################################
 ## target_file: path to BED file of one or more known gene editing target regions, leave blank if this is a gene therapy sample
-## max_clone_dist: maximum distance allowed for merging unique clone sites, ignored if target_file is provided (gene-editing sample), use negative values to enfore overlapping; We recommand -INSERT_SIZE (default -2)
 ## min_clone_loc: minimum distinct UMI R1 locus required to define a clonal expasion, ignored if target_file is provided (gene-editing sample) (default 2)
-### sample_name	fastq_R1	fastq_R2	fastq_I1	fastq_I2	vector_file	trim_prog	max_error_rate	min_len	trim_opts	aligner	align_opts	ref_db	min_mapQ	max_dist	ref_gff	genome_seq	min_clone_exp	target_file
-B165-16-B4	B165-16-B4_S16_L001_R1_001.fastq.gz	B165-16-B4_S16_L001_R2_001.fastq.gz	B165-16-B4_S16_L001_I1_001.fastq.gz	B165-16-B4_S16_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	44	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	-2	2
-B165-17-B5	B165-17-B5_S17_L001_R1_001.fastq.gz	B165-17-B5_S17_L001_R2_001.fastq.gz	B165-17-B5_S17_L001_I1_001.fastq.gz	B165-17-B5_S17_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	44	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	-2	2
+### sample_name	fastq_R1	fastq_R2	fastq_I1	fastq_I2	vector_file	trim_prog	max_error_rate	min_len	trim_opts	aligner	align_opts	ref_db	min_mapQ	ref_gff	genome_seq	min_clone_exp	target_file	min_clone_loc
+B165-16-B4	B165-16-B4_S16_L001_R1_001.fastq.gz	B165-16-B4_S16_L001_R2_001.fastq.gz	B165-16-B4_S16_L001_I1_001.fastq.gz	B165-16-B4_S16_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	2
+B165-17-B5	B165-17-B5_S17_L001_R1_001.fastq.gz	B165-17-B5_S17_L001_R2_001.fastq.gz	B165-17-B5_S17_L001_I1_001.fastq.gz	B165-17-B5_S17_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	2
