Template config file updated

--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -4,17 +4,17 @@
 ## NUM_PROC=16: # of processors (threads) to use, set it <= 2 * processors [default 8]
 ## BASE_DIR=.: base directory for results (sequences, alignments, tables, figures, etc.) [default .]
 ## WORK_DIR=WORK: working directory for all intermediate files [default WORK/]
-## SCRIPT_DIR=scripts: path to the pipeline scripts, default [scripts/]
+## SCRIPT_DIR=scripts: path to the pipeline scripts, [default scripts/]
 ## DEMUX_DIR=fastqs/demux: path to demultiplexed per-sample FASTQ files [default fastqs/demux/]
 ## VECTOR_DIR=AAV_vector: path to the AAV vector sequence files [default AAV_vector/]
-## UMI_LEN=8: Unique Molecular Identifier (UMI) length that were built into the P5 Index primer [default 6]
+## UMI_LEN=8: Unique Molecular Identifier (UMI) length that were built into the P5 Index primer [default 8]
 ## UMI_MM=0: mismatch allowed when mark UMI duplicates [default 0]
 ## ITR_PRIMER=ACAAGGAACCCCTAGTGATGGAGTTGGCC: ITR-specific (GSP3) primer sequence that are revcom to the ITR sequence
 ## INSERT_SIZE=2: ITR insertion recgonization site size by the ribonuclease, used to call insertion site [default 20]
 ## KEEP_UNPAIR=1: beside paired mapped reference reads, which additional strand to keep, 0 for none, 1 for forward, 2 for reverse and 3 for both [default 1]
-## KEEP_STRAND=3: strand(s) required for peaks, 0: no requirement, 1 forward, 2: reverse, 3: both, [use 3 for editing, 0 for therapy]
-## MAX_PEAK_DIST=44: maximum distance allowed for merging multiple alignment into peaks/islands, we recommand use 2 X target size [default 44]
-## MAX_CLONE_DIST=-2: maximum distance allowed for merging unique clone sites, ignored if target_file is provided (gene-editing sample), use negative values to enfore overlapping; We recommand -INSERT_SIZE [default -2]
+## KEEP_STRAND=3: strand(s) required for peaks, 0: no requirement, 1 forward, 2: reverse, 3: both, we recommend use 3 for gene-editing and 0 for gene-therapy [default 3]
+## MAX_PEAK_DIST=44: maximum distance allowed for merging multiple alignment into peaks/islands, we recommend use 2 X the target size [default 44]
+## MAX_CLONE_DIST=-2: maximum distance allowed for merging unique clone sites, ignored if target_file is provided (gene-editing sample), use negative values to enforce overlapping; We recommend -INSERT_SIZE [default -2]
 ##########################
 # Per-sample options below
 ##########################
