Adding BZ2 compressed file support

--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -10,7 +10,7 @@
 ## UMI_LEN=8: Unique Molecular Identifier (UMI) length that were built into the P5 Index primer [default 8]
 ## UMI_MM=0: mismatch allowed when mark UMI duplicates [default 0]
 ## ITR_PRIMER=ACAAGGAACCCCTAGTGATGGAGTTGGCC: ITR-specific (GSP3) primer sequence that are revcom to the ITR sequence
-## INSERT_SIZE=2: ITR insertion recgonization site size by the ribonuclease, used to call insertion site [default 2]
+## INSERT_SIZE=2: ITR insertion recgonization site size by the meganuclease, used to call insertion site [default 2]
 ## KEEP_UNPAIR=1: beside paired mapped reference reads, which additional strand to keep, 0 for none, 1 for forward, 2 for reverse and 3 for both [default 1]
 ## KEEP_STRAND=3: strand(s) required for peaks, 0: no requirement, 1 forward, 2: reverse, 3: both, we recommend use 3 for gene-editing and 0 for gene-therapy [default 3]
 ## MAX_PEAK_DIST=44: maximum distance allowed for merging multiple alignment into peaks/islands, we recommend use 2 X the target size [default 44]
@@ -19,23 +19,23 @@
 # Per-sample options below
 ##########################
 ## sample_name: unique sample name, don't have to the the run name loaded into the sequencer
-## fastq_R1: filename of forward FASTQ read (R1), .gz files are accepted
-## fastq_R2: filename of reverse FASTQ read (R2), .gz files are accepted
-## fastq_I1: filename of forward FASTQ index (I1), .gz files are accepted
-## fastq_I2: filename of reverse FASTQ index (I2), .gz files are accepted
+## fastq_R1: filename of forward FASTQ read (R1), .gz or .bz2 files are accepted
+## fastq_R2: filename of reverse FASTQ read (R2), .gz or .bz2 files are accepted
+## fastq_I1: filename of forward FASTQ index (I1), .gz or .bz2 files are accepted
+## fastq_I2: filename of reverse FASTQ index (I2), .gz or .bz2 files are accepted
 #################################
 ### ITR sequence trimming options
 #################################
-## vector_file: Vector sequence file (in GenBank (.gb) format), from which its 5' ITR repeat sequences will be extracted and used as adaptors to be trimmed. You can contate multiple GenBank files together, as long as they have unique "LOCUS" names at the beginning of the files
-## trim_prog: program used to trim ITR sequences at the beinning of the reverse (R2) reads, now support only 'cutadapt'
-## max_error_rate: maximum error rate between ITR sequence(s) and the R2 reads (recommand 0.1)
+## vector_file: Vector sequence(s) file in GenBank format
+## trim_prog: program used to identify ITR-primer containing reads (5' of R2, 3' of R1), now only supports 'cutadapt'
+## max_error_rate: maximum error rate allowed for identifying ITR-primer containing reads (recommend 0.1)
 ## min_len: minimum length after trimming (recommend 18)
-## trim_opts: any other options you want to enable for the trimming program of choice, leave blank if none
+## trim_opts: additional options to invoke the trimming program, or leave blank if none
 ########################
 ### Read mapping options
 ########################
 ## aligner: NGS aligner name to use, now supports 'bowtie2' and 'bwa'
-## align_opts: any additonal options you want to use to invoke the NGS aligner, i.e. '--local' for bowtie2. Read the aligner's manual before setting this
+## align_opts: additional options to invoke the NGS aligner, or leave blank if none
 ## ref_db: path/name to reference genome database, e.g.: /project/gtplab/pub_data/genomes/Macaca_mulatta/Bowtie2_index/Mmul_10/MMul_10
 ######################################
 ### Filtering and peak calling options
@@ -49,7 +49,7 @@
 ### Gene editing/therapy options
 ################################
 ## target_file: path to BED file of one or more known gene editing target regions, leave blank if this is a gene therapy sample
-## min_clone_loc: minimum distinct UMI R1 locus required to define a clonal expasion, ignored if target_file is provided (gene-editing sample) (default 2)
+## min_clone_loc: minimum distinct UMI R1 locus required to define a clone expansion, ignored if target_file is provided (gene-editing sample) (default 2)
 ### sample_name	fastq_R1	fastq_R2	fastq_I1	fastq_I2	vector_file	trim_prog	max_error_rate	min_len	trim_opts	aligner	align_opts	ref_db	min_mapQ	ref_gff	genome_seq	min_clone_exp	target_file	min_clone_loc
 B165-16-B4	B165-16-B4_S16_L001_R1_001.fastq.gz	B165-16-B4_S16_L001_R2_001.fastq.gz	B165-16-B4_S16_L001_I1_001.fastq.gz	B165-16-B4_S16_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	2
 B165-17-B5	B165-17-B5_S17_L001_R1_001.fastq.gz	B165-17-B5_S17_L001_R2_001.fastq.gz	B165-17-B5_S17_L001_I1_001.fastq.gz	B165-17-B5_S17_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	2
