--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -9,7 +9,7 @@
 ## VECTOR_DIR=AAV_vector: path to the AAV vector sequence files [default AAV_vector/]
 ## UMI_LEN=8: Unique Molecular Identifier (UMI) length that were built into the P5 Index primer [default 8]
 ## UMI_MM=0: mismatch allowed when mark UMI duplicates [default 0]
-## ITR_PRIMER=ACAAGGAACCCCTAGTGATGGAGTTGGCC: ITR-specific (GSP3) primer sequence that are revcom to the ITR sequence
+## ITR_PRIMER=ACAAGGAACCCCTAGTGATGGAGTTGGCCACTCCCTC: ITR-specific (GSP3) primer sequence + 8 bp padding that are revcom to the ITR sequence
 ## INSERT_SIZE=2: ITR insertion recgonization site size by the meganuclease, used to call insertion site [default 2]
 ## KEEP_UNPAIR=1: beside paired mapped reference reads, which additional strand to keep, 0 for none, 1 for forward, 2 for reverse and 3 for both [default 1]
 ## KEEP_STRAND=3: strand(s) required for peaks, 0: no requirement, 1 forward, 2: reverse, 3: both, we recommend use 3 for gene-editing and 0 for gene-therapy [default 3]
@@ -43,13 +43,14 @@
 ## min_mapQ: minimum mapping quality (mapQ) values required (recommend 30)
 ### Classify/Annotate options
 #############################
-## ref_gff: path to reference genome GFF3/GTF annotation file(s), e.g.: /project/gtplab/pub_data/genomes/Macaca_mulatta/annotation/Macaca_mulatta.Mmul_10.105.clean.gff3, multiple GFF3/GTF annotation files separated by space are allowed
+## ref_gff: path to reference GFF3/GTF annotation file sorted by coordinates, e.g.: /project/gtplab/pub_data/genomes/Macaca_mulatta/annotation/Macaca_mulatta.Mmul_10.105.clean.sorted.gff3
 ## genome_seq: path to genome seq file, or directory containing genomic seq files (in FASTA format), e.g. /project/gtplab/pub_data/genomes/Macaca_mulatta/fasta/Mmul_10/
+## anno_opts: additional options to invoke for peak annotation, or leave blank if none, e.g. '--exclude-type chromosome,biological_region', default '--exclude-type chromosome,region,biological_region,mRNA,exon,pseudogenic_transcript
 ################################
 ### Gene editing/therapy options
 ################################
 ## target_file: path to BED file of one or more known gene editing target regions, leave blank if this is a gene therapy sample
 ## min_clone_loc: minimum distinct UMI R1 locus required to define a clone expansion, ignored if target_file is provided (gene-editing sample) (default 2)
-### sample_name	fastq_R1	fastq_R2	fastq_I1	fastq_I2	vector_file	trim_prog	max_error_rate	min_len	trim_opts	aligner	align_opts	ref_db	min_mapQ	ref_gff	genome_seq	min_clone_exp	target_file	min_clone_loc
-B165-16-B4	B165-16-B4_S16_L001_R1_001.fastq.gz	B165-16-B4_S16_L001_R2_001.fastq.gz	B165-16-B4_S16_L001_I1_001.fastq.gz	B165-16-B4_S16_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa	TTR_exon3_target_Mmul_8.0.1.bed	2
-B165-17-B5	B165-17-B5_S17_L001_R1_001.fastq.gz	B165-17-B5_S17_L001_R2_001.fastq.gz	B165-17-B5_S17_L001_I1_001.fastq.gz	B165-17-B5_S17_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_10/Mmul_10	30	annotation/Macaca_mulatta.Mmul_10.105.clean.gff3	fasta/Mmul_10/Mmul_10.fa	TTR_exon3_target_Mmul_10.bed	2
+### sample_name	fastq_R1	fastq_R2	fastq_I1	fastq_I2	vector_file	trim_prog	max_error_rate	min_len	trim_opts	aligner	align_opts	ref_db	min_mapQ	ref_gff	genome_seq	anno_opts	target_file	min_clone_loc
+B165-16-B4	B165-16-B4_S16_L001_R1_001.fastq.gz	B165-16-B4_S16_L001_R2_001.fastq.gz	B165-16-B4_S16_L001_I1_001.fastq.gz	B165-16-B4_S16_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa		TTR_exon3_target_Mmul_8.0.1.bed	2
+B165-17-B5	B165-17-B5_S17_L001_R1_001.fastq.gz	B165-17-B5_S17_L001_R2_001.fastq.gz	B165-17-B5_S17_L001_I1_001.fastq.gz	B165-17-B5_S17_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_10/Mmul_10	30	annotation/Macaca_mulatta.Mmul_10.105.clean.gff3	fasta/Mmul_10/Mmul_10.fa		TTR_exon3_target_Mmul_10.bed	2
