--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -15,6 +15,10 @@
 ## KEEP_STRAND=3: strand(s) required for peaks, 0: no requirement, 1 forward, 2: reverse, 3: both, we recommend use 3 for gene-editing and 0 for gene-therapy [default 3]
 ## MAX_PEAK_DIST=44: maximum distance allowed for merging multiple alignment into peaks/islands, we recommend use 2 X the target size [default 44]
 ## MAX_CLONE_DIST=-2: maximum distance allowed for merging unique clone sites, ignored if target_file is provided (gene-editing sample), use negative values to enforce overlapping; We recommend -INSERT_SIZE [default -2]
+## PRIMER_FLANK=50: size of peak/clone site flanking sequence to check/filter for mispriming
+## PRIMER_SEED_LEN=12: seed length of the 3' primer (5' of the revcom) to searching for potential mis-priming
+## PRIMER_MAX_SEED_ERROR=0.15: max seed error for defining a mis-priming
+## PRIMER_MAX_ERROR=0.5: minimum overall error for defining a mis-priming
 ##########################
 # Per-sample options below
 ##########################
