new mispriming filter steps implemented

--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -16,9 +16,10 @@
 ## MAX_PEAK_DIST=44: maximum distance allowed for merging multiple alignment into peaks/islands, we recommend use 2 X the target size [default 44]
 ## MAX_CLONE_DIST=-2: maximum distance allowed for merging unique clone sites, ignored if target_file is provided (gene-editing sample), use negative values to enforce overlapping; We recommend -INSERT_SIZE [default -2]
 ## PRIMER_FLANK=50: size of peak/clone site flanking sequence to check/filter for mispriming
-## PRIMER_SEED_LEN=12: seed length of the 3' primer (5' of the revcom) to searching for potential mis-priming
-## PRIMER_MAX_SEED_ERROR=0.15: max seed error for defining a mis-priming
-## PRIMER_MAX_ERROR=0.5: minimum overall error for defining a mis-priming
+## PRIMER_ALN_OPTS=: other options passed to local aligner between primer (and revcom) and the peak/clone flanking seq, i.e. '-gapextend 1' [default NULL]
+## PRIMER_SEED_LEN=10: seed length of the 3' primer (5' of the revcom) to searching for potential mis-priming
+## PRIMER_MAX_SEED_ERROR=0.1: max seed error for defining a mispriming
+## PRIMER_MIN_MATCH=12: minimum aligned primer bases for defining a mispriming
 ##########################
 # Per-sample options below
 ##########################
@@ -41,9 +42,9 @@
 ## aligner: NGS aligner name to use, now supports 'bowtie2' and 'bwa'
 ## align_opts: additional options to invoke the NGS aligner, or leave blank if none
 ## ref_db: path/name to reference genome database, e.g.: /project/gtplab/pub_data/genomes/Macaca_mulatta/Bowtie2_index/Mmul_10/MMul_10
-######################################
-### Filtering and peak calling options
-######################################
+########################
+### peak calling options
+########################
 ## min_mapQ: minimum mapping quality (mapQ) values required (recommend 30)
 ### Classify/Annotate options
 #############################
