--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -9,7 +9,7 @@
 ## VECTOR_DIR=AAV_vector: path to the AAV vector sequence files [default AAV_vector/]
 ## UMI_LEN=8: Unique Molecular Identifier (UMI) length that were built into the P5 Index primer [default 8]
 ## UMI_MM=0: mismatch allowed when mark UMI duplicates [default 0]
-## ITR_PRIMER=ACAAGGAACCCCTAGTGATGGAGTTGGCCACTCCCTC: ITR-specific (GSP3) primer sequence + 8 bp padding that are revcom to the ITR sequence
+## ITR_PRIMER=ACAAGGAACCCCTAGTGATGGAGTTGGCC: ITR-specific (GSP3) primer sequence that are revcom to the ITR sequence
 ## INSERT_SIZE=2: ITR insertion recgonization site size by the meganuclease, used to call insertion site [default 2]
 ## KEEP_UNPAIR=1: beside paired mapped reference reads, which additional strand to keep, 0 for none, 1 for forward, 2 for reverse and 3 for both [default 1]
 ## KEEP_STRAND=3: strand(s) required for peaks, 0: no requirement, 1 forward, 2: reverse, 3: both, we recommend use 3 for gene-editing and 0 for gene-therapy [default 3]
