pipeline updated to allow multiple primer sequences privided in PRIMER_FILE

--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -1,7 +1,7 @@
 ### Copy and fill this experimental design template in your ITR_Seq analysis directory
 ### Global variables are in upper cases
 ## Per sample options are in lower cases
-## NUM_PROC=16: # of processors (threads) to use, set it <= 2 * processors [default 8]
+## NUM_PROC=24: # of processors (threads) to use, set it <= 2 * processors [default 8]
 ## BASE_DIR=.: base directory for results (sequences, alignments, tables, figures, etc.) [default .]
 ## WORK_DIR=WORK: working directory for all intermediate files [default WORK/]
 ## SCRIPT_DIR=scripts: path to the pipeline scripts, [default scripts/]
@@ -9,7 +9,7 @@
 ## VECTOR_DIR=AAV_vector: path to the AAV vector sequence files [default AAV_vector/]
 ## UMI_LEN=8: Unique Molecular Identifier (UMI) length that were built into the P5 Index primer [default 8]
 ## UMI_MM=0: mismatch allowed when mark UMI duplicates [default 0]
-## ITR_PRIMER=ACAAGGAACCCCTAGTGATGGAGTTGGCC: ITR-specific (GSP3) primer sequence that are revcom to the ITR sequence
+## PRIMER_FILE=ITR_primer.fa: PATH to ITR-specific (GSP3) primer sequence(s) that are revcom to the ITR sequence
 ## INSERT_SIZE=2: ITR insertion recgonization site size by the meganuclease, used to call insertion site [default 2]
 ## KEEP_UNPAIR=1: beside paired mapped reference reads, which additional strand to keep, 0 for none, 1 for forward, 2 for reverse and 3 for both [default 1]
 ## KEEP_STRAND=3: strand(s) required for peaks, 0: no requirement, 1 forward, 2: reverse, 3: both, we recommend use 3 for gene-editing and 0 for gene-therapy [default 3]
@@ -17,7 +17,7 @@
 ## PRIMER_FLANK=50: size of peak/clone site flanking sequence to check/filter for mispriming
 ## PRIMER_ALN_OPTS=: other options passed to local aligner between primer (and revcom) and the peak/clone flanking seq, i.e. '-gapextend 1' [default NULL]
 ## PRIMER_SEED_LEN=10: seed length of the 3' primer (5' of the revcom) to searching for potential mis-priming
-## PRIMER_MAX_SEED_ERROR=0.1: max seed error for defining a mispriming
+## PRIMER_MAX_SEED_ERROR=0.1: max seed error for defining a mispriming, we recommand 0.1 for gene-therapy or gene-editing samples, and 0.2 for wtAAV samples (multiple primer-version)
 ## PRIMER_MIN_MATCH=12: minimum aligned primer bases for defining a mispriming
 ##########################
 # Per-sample options below
@@ -44,7 +44,8 @@
 ########################
 ### peak calling options
 ########################
-## min_mapQ: minimum mapping quality (mapQ) values required (recommend 30)
+## min_mapQ: minimum mapping quality (mapQ) values required for ref and vec mapping (recommend 30)
+## novec_min_mapQ: minimum mapQ for filtering out vec-mapped reads from vec mapping (recommend 0 for regular ITR-Seq, 30 for wtAAV-ITR-Seq)
 ### Classify/Annotate options
 #############################
 ## ref_gff: path to reference GFF3/GTF annotation file(s) sorted by coordinates, multiple files must be separated by comma, e.g.: /project/gtplab/pub_data/genomes/Macaca_mulatta/annotation/Macaca_mulatta.Mmul_10.105.clean.sorted.gff3
@@ -55,6 +56,6 @@
 ################################
 ## target_file: path to BED file of one or more known gene editing target regions, leave blank if this is a gene therapy sample
 ## min_clone_loc: minimum distinct UMI R1 locus required to define a clone expansion, ignored if target_file is provided (gene-editing sample) (default 2)
-### sample_name	fastq_R1	fastq_R2	fastq_I1	fastq_I2	vector_file	trim_prog	max_error_rate	min_len	trim_opts	aligner	align_opts	ref_db	min_mapQ	ref_gff	genome_seq	anno_opts	target_file	min_clone_loc
-B165-16-B4	B165-16-B4_S16_L001_R1_001.fastq.gz	B165-16-B4_S16_L001_R2_001.fastq.gz	B165-16-B4_S16_L001_I1_001.fastq.gz	B165-16-B4_S16_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa		TTR_exon3_target_Mmul_8.0.1.bed	2
-B165-17-B5	B165-17-B5_S17_L001_R1_001.fastq.gz	B165-17-B5_S17_L001_R2_001.fastq.gz	B165-17-B5_S17_L001_I1_001.fastq.gz	B165-17-B5_S17_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_10/Mmul_10	30	annotation/Macaca_mulatta.Mmul_10.105.clean.gff3,UCSC_annotation/Mmul_10_rmsk.gff3	fasta/Mmul_10/Mmul_10.fa		TTR_exon3_target_Mmul_10.bed	2
+### sample_name	fastq_R1	fastq_R2	fastq_I1	fastq_I2	vector_file	trim_prog	max_error_rate	min_len	trim_opts	aligner	align_opts	ref_db	min_mapQ	novec_min_mapQ	ref_gff	genome_seq	anno_opts	target_file	min_clone_loc
+B165-16-B4	B165-16-B4_S16_L001_R1_001.fastq.gz	B165-16-B4_S16_L001_R2_001.fastq.gz	B165-16-B4_S16_L001_I1_001.fastq.gz	B165-16-B4_S16_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_8.0.1/Mmul_8.0.1	30	30	annotation/Macaca_mulatta.Mmul_8.0.1.97.clean.gff3	fasta/Mmul_8.0.1.fa		TTR_exon3_target_Mmul_8.0.1.bed	2
+B165-17-B5	B165-17-B5_S17_L001_R1_001.fastq.gz	B165-17-B5_S17_L001_R2_001.fastq.gz	B165-17-B5_S17_L001_I1_001.fastq.gz	B165-17-B5_S17_L001_I2_001.fastq.gz	p5149.gb	cutadapt	0.1	18		bowtie2		Bowtie2_index/Mmul_10/Mmul_10	30	30	annotation/Macaca_mulatta.Mmul_10.105.clean.gff3,UCSC_annotation/Mmul_10_rmsk.gff3	fasta/Mmul_10/Mmul_10.fa		TTR_exon3_target_Mmul_10.bed	2
