--- a/Template_ITR_Seq_experimental_design.conf
+++ b/Template_ITR_Seq_experimental_design.conf
@@ -8,7 +8,7 @@
 ## DEMUX_DIR=fastqs/demux: path to demultiplexed per-sample FASTQ files [default fastqs/demux/]
 ## VECTOR_DIR=AAV_vector: path to the AAV vector sequence files [default AAV_vector/]
 ## VECTOR_MASK=ITR|repeat_region|inverted tandem repeat|(?i:ARM)|shHDR: regex string to search and mask in vector file [default ITR|repeat_region|inverted tandem repeat|(?i:ARM)|shHDR]
-## UMI_LEN=8: Unique Molecular Identifier (UMI) length that were built into the P5 Index primer [default 8]
+## UMI_LEN=8: Unique Molecular Identifier (UMI) length that were built into the P5 Index primer, set to 0 if UMI is already inline in the R1/R2 fastq files from NextSeq 2000 [default 8]
 ## UMI_MM=0: mismatch allowed when mark UMI duplicates [default 0]
 ## PRIMER_FILE=ITR_primer.fa: PATH to ITR-specific (GSP3) primer sequence(s) that are revcom to the ITR sequence, see the GSP3 example in the data/ subdir [default ITR_primer.fa]
 ## INSERT_SIZE=2: ITR insertion recgonization site size by the meganuclease, used to call insertion site [default 2]
